--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
 
     # Runs a set of commands using the runners shell
     - name: Installing Surge
-      run: npm install --global surge
+      run: npm install -g surge
       - name: Deploying using surge
       run: surge ./ Sample2020.surge.sh --token $ {{ secrets.SURGE_TOKEN }}
        
