--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
 
     # Runs a set of commands using the runners shell
     - name: Installing surge
-      run: |npm install -g surge
+      run: npm install -g surge
     - name: Deploying surge
       run: surge ./ samir.surge.sh --token $ {{ secrets.SURGE_TOKEN }}
       
